[project]
name = "rl-mpc"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Justin Chiu", email = "chiu.justin.t@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "chz>=0.4.0",
    "gymnasium>=0.29.0",
    "pufferlib>=3.0.0,<4.0.0",
    "pygame>=2.6.1",
    "stable-baselines3>=2.7.1",
    "tensorboard>=2.20.0",
    "torch>=2.10.0",
    "tqdm>=4.66.0",
    "wandb>=0.24.1",
]

[build-system]
requires = ["uv_build>=0.8.22,<0.9.0"]
build-backend = "uv_build"

[tool.uv]
no-build-isolation = true
