[project]
name = "rl-mpc"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Justin Chiu", email = "chiu.justin.t@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "chz>=0.4.0",
    "gymnasium>=0.29.0",
    "moviepy>=1.0.3",
    "pufferlib>=3.0.0,<4.0.0",
    "pygame>=2.6.1",
    "pydantic>=2.7.0",
    "stable-baselines3>=2.7.1",
    "streamlit>=1.33.0",
    "tensorboard>=2.20.0",
    "torch>=2.10.0",
    "tqdm>=4.66.0",
    "wandb>=0.17.0",
]

[build-system]
requires = ["uv_build>=0.8.22,<0.9.0"]
build-backend = "uv_build"

[tool.uv]
no-build-isolation = true
